--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "~4.16.1",
-    "express-rate-limit": "^8.0.1"
+    "express-rate-limit": "^8.0.1",
+    "mongoose": "^8.16.5"
   }
 }
